fix: scroll and overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,26 @@ main {
 .bold {
     color: var(--main-color);
 }
+.items {
+    overflow: auto;
+    min-height: min-content;
+    max-height: 15rem;
+}
+.items::-webkit-scrollbar{
+    width: 5px;
+}
+/* Track */
+.items::-webkit-scrollbar-track {
+    background: #9fa18a40;
+    border-radius: 20px;
+  }
+.items::-webkit-scrollbar-thumb {
+  background: #B5C40180;
+  border-radius: 20px;
+}
+.items::-webkit-scrollbar-thumb:hover {
+    background: #B5C401;
+  }
 .cart-items{
     --main-color: #7F3992;
     margin-left: 1rem;
@@ -212,7 +232,6 @@ footer {
     display: flex;
     justify-content: center;
     margin-top: auto;
-    padding: 0.5rem;
     box-shadow: 0px -5px 5px #EBEBEB;
     font-size: 0.7rem;
 }
